--- a/portfolio/src/pages/styles/Landing.css
+++ b/portfolio/src/pages/styles/Landing.css
@@ -2,7 +2,12 @@
   color: white;
   font-family: "Fuzzy Bubbles", cursive;
   font-size: 80px;
-  margin-bottom: 5%;
+}
+
+.personalName {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 40px;
 }
 
 .navContainer {
@@ -10,13 +15,12 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 25px;
 }
 
 .navItem {
   color: white;
   text-decoration: none;
-  padding: 15px 30px;
+  padding: 20px 30px;
   font-size: 22px;
   transition: 0.6s;
 }
