--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,9 +3,20 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  overflow-x: hidden;
+}
+
+.navContainer {
+  width: 100%;
+  display: flex;
+  background-color: rgb(149, 179, 206);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 80px;
+  overflow: hidden;
 }
