--- a/portfolio/src/pages/styles/Landing.css
+++ b/portfolio/src/pages/styles/Landing.css
@@ -1,31 +1,11 @@
 .appTitle {
-  color: white;
+  color: rgb(14, 14, 117);
   font-family: "Fuzzy Bubbles", cursive;
   font-size: 80px;
 }
 
 .personalName {
-  color: white;
+  color: rgb(14, 14, 117);
   font-size: 20px;
   margin-bottom: 40px;
-}
-
-.navContainer {
-  width: 30%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.navItem {
-  color: white;
-  text-decoration: none;
-  font-size: 22px;
-  transition: 0.6s;
-}
-
-.navItem:hover {
-  font-size: 28px;
-  font-weight: bolder;
-  cursor: pointer;
 }
