--- a/portfolio/src/components/styles/Card.css
+++ b/portfolio/src/components/styles/Card.css
@@ -2,22 +2,20 @@
   width: 200px;
   height: 175px;
   margin: 15px;
-  background-color: rgb(216, 216, 216);
   border-radius: 15px;
   box-shadow: 0 0 6px grey;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .cardTitle {
-  font-family: "Anton", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 20px;
   color: black;
-  background-color: #e3e3e38c;
   width: 100%;
-  box-shadow: 0 0 6px white;
 }
 
 .cardText {
@@ -28,3 +26,22 @@
   padding: 0 10px;
   background-color: #e3e3e38c;
 }
+
+.progressBar {
+  height: 20px;
+  width: 90%;
+  border-radius: 5px;
+  margin: 5px auto;
+  border: 1px solid black;
+  /*animation: progress 1s ease-out;*/
+  /*animation-fill-mode: forwards;*/
+}
+
+/*@keyframes progress {
+  0% {
+    background-: transparent;
+  }
+  100% {
+    background-color: red;
+  }
+}*/
