--- a/portfolio/src/pages/styles/Skills.css
+++ b/portfolio/src/pages/styles/Skills.css
@@ -3,5 +3,11 @@
   margin: 0 auto 80px;
   max-width: 80%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
+}
+
+.cardCategory {
+  width: 100%;
+  margin: 40px 0;
+  margin-left: 15px;
 }
