--- a/portfolio/src/components/styles/Card.css
+++ b/portfolio/src/components/styles/Card.css
@@ -9,6 +9,11 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 0 12px grey;
 }
 
 .cardTitle {
@@ -28,20 +33,8 @@
 }
 
 .progressBar {
-  height: 20px;
-  width: 90%;
-  border-radius: 5px;
+  height: 10px;
+  width: 100%;
   margin: 5px auto;
-  border: 1px solid black;
-  /*animation: progress 1s ease-out;*/
-  /*animation-fill-mode: forwards;*/
+  border-color: black;
 }
-
-/*@keyframes progress {
-  0% {
-    background-: transparent;
-  }
-  100% {
-    background-color: red;
-  }
-}*/
