--- a/portfolio/src/pages/styles/Contact.css
+++ b/portfolio/src/pages/styles/Contact.css
@@ -1,36 +1,42 @@
 .contactContainer {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
-.contactString,
-.explanation {
-  margin-bottom: 15px;
-  font-size: 20px;
-  max-width: 90%;
-  margin: auto;
+.image {
+  width: 200px;
 }
 
-.contactString {
-  margin-bottom: 40px;
+.contactDetail {
+  margin: 0 15px;
+  font-size: 22px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
-.contactString a {
+.contactItem {
+  display: flex;
+}
+
+.contactIcon {
+  font-size: 26px;
+  margin: 4px 15px 0;
+}
+
+.contactLink {
   text-decoration: none;
   color: black;
-  box-sizing: border-box;
-  border-bottom: 2px solid #5523a7;
-  transition: 0.2s;
+  border-bottom: 1px solid #5523a7;
+  transition: 0.3s;
 }
 
-.contactString a:hover,
-.homeLink:hover {
-  padding: 0 5px 3px;
+.contactSocialsContainer {
+  align-self: center;
 }
 
-.homeLink {
+.contactSocials {
   text-decoration: none;
-  color: black;
-  box-sizing: border-box;
-  border-bottom: 2px solid #5523a7;
-  transition: 0.2s;
+  color: #5523a7;
 }
